[package]
name = "rust_lib_true_lens_ai_v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib_true_lens_ai_v2"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic", "ndarray"] }
anyhow = "1.0"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
ndarray = "0.16"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
